[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Fonts/retro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/MainMenu.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/UI/training_press.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/training.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="MainMenu" type="Sprite" parent="."]
position = Vector2( 512, 301 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -508.0
margin_top = -80.0
margin_right = 508.0

[node name="solo" type="TextureButton" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 80.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/solo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -22.5
margin_right = 41.0
margin_bottom = 22.5
custom_fonts/font = SubResource( 2 )
text = "SOLO"

[node name="multi" type="TextureButton" parent="VBoxContainer"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 80.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/multi"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -22.5
margin_right = 48.5
margin_bottom = 22.5
custom_fonts/font = SubResource( 1 )
text = "MULTI"

[node name="instructions" type="TextureButton" parent="VBoxContainer"]
margin_left = 508.0
margin_right = 758.0
margin_bottom = 80.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/instructions"]
margin_left = 8.74994
margin_top = 16.25
margin_right = 244.75
margin_bottom = 61.25
custom_fonts/font = SubResource( 1 )
text = "HOW TO PLAY?"

[node name="quit" type="TextureButton" parent="VBoxContainer"]
margin_left = 762.0
margin_right = 1012.0
margin_bottom = 80.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/quit"]
margin_left = 87.0
margin_top = 17.0
margin_right = 170.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/solo" to="." method="_on_solo_pressed"]
[connection signal="pressed" from="VBoxContainer/multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="VBoxContainer/instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
